<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tweet</string>
    <string name="login_label">Login</string>
    <string name="profile_image">profile image</string>
    <string name="reply">reply</string>
    <string name="retweet">retweet</string>
    <string name="like">like</string>
    <string name="message">message</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tweet_hint">What\'s happening?</string>
    <string name="compose_hint">What\'s happening?</string>
    <string name="tweet_button">Tweet</string>
    <string name="tweet_count">140</string>
    <string name="home">Home</string>

    <string name="title_activity_image_fullscreen">ImageFullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="not_connected">Not connected to internet</string>
    <string name="sign_up">Sign up</string>
    <string name="background_image">background image</string>

</resources>